# petra_plc

./: Cargo.toml  all_code.txt
benches/: scan_benchmark.rs
config/: advanced_example.yaml  example_logic.yaml  pump_alternation.yaml  test_basic.yaml
src/: error.rs  lib.rs  main.rs
src/blocks/: mod.rs  traits.rs
src/blocks/basic/: comparison.rs  const_block.rs  logic.rs  mod.rs
src/blocks/counters/: counter.rs  mod.rs  sequencer.rs
src/blocks/timers/: mod.rs  tof.rs  ton.rs  tp.rs
src/blocks/triggers/: f_trig.rs  mod.rs  r_trig.rs  sr_latch.rs
src/editor/: app.rs  export.rs  graph_state.rs  mod.rs  node_types.rs  templates.rs
src/engine/: config.rs  mod.rs  scan.rs
src/examples/: pump_monitor.rs
src/signal/: bus.rs  mod.rs  value.rs
tests/: pump_alternation_test.rs
